--- a/.github/workflows/ci-performance-benchmarks.yaml
+++ b/.github/workflows/ci-performance-benchmarks.yaml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Benchmark Performance
     steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Install aws-iam-authenticator
         run: |
           curl -o aws-iam-authenticator https://amazon-eks.s3.us-west-2.amazonaws.com/1.18.8/2020-09-18/bin/linux/amd64/aws-iam-authenticator && \
@@ -31,13 +31,16 @@ jobs:
       - name: Get Token
         id: get-token
         run: |
-          echo "::set-output name=token::$(aws-iam-authenticator token -i eks-cluster-1 -r $ROLE)"
+          echo "::set-output name=token::$(aws-iam-authenticator token -i eks-cluster-1 -r $ROLE --token-only)"
         env:
           ROLE: ${{ secrets.AWS_ROLE_TO_ASSUME }}
       - name: Auth kubeconfig
         run: |
-          echo "$CONFIG" > ./kubeconfig
+          echo "$CONFIG" > kubeconfig
           KUBECONFIG=kubeconfig kubectl config set-credentials github-actions-dolt --token="$TOKEN"
+          KUBECONFIG=kubeconfig kubectl config set-context github-actions-dolt-context --cluster=eks-cluster-1 --user=github-actions-dolt --namespace=performance-benchmarking
+          KUBECONFIG=kubeconfig kubectl config use-context github-actions-dolt-context
+          KUBECONFIG=kubeconfig kubectl config view
           KUBECONFIG=kubeconfig kubectl get pods -n performance-benchmarking
         env:
           CONFIG: ${{ secrets.CORP_KUBECONFIG }}
